🔧 fixed psub-plan__icon sizes on mobile

--- a/styles.css
+++ b/styles.css
@@ -436,7 +436,7 @@ a:active {
 	background-color: var(--wyt);
 }
 
-.sub-plan__icon {
+.sub-plan__card .sub-plan__icon {
 	font-size: 2.2rem;
 }
 
@@ -459,6 +459,17 @@ a:active {
 	min-height: 200px;
 }
 
+@media screen and (max-width: 768px) {
+	.sub-plan__card .sub-plan__icon {
+		font-size: 6rem;
+	}
+
+	/* Gold subscription icon should be larger */
+	.sub-plan__card:nth-child(2) .sub-plan__icon {
+		font-size: 12rem;
+	}
+}
+
 @media screen and (max-width: 1100px) {
 	.sub-plans__wrapper {
 		align-items: center;
@@ -475,10 +486,6 @@ a:active {
 		min-height: 100px;
 	}
 
-	.sub-plan__icon {
-		font-size: 6rem;
-	}
-
 	.sub-plan__card .sub-plan__title h4 {
 		margin: 1rem 0rem;
 		font-size: clamp(1.5rem, 6vw, 3rem);
@@ -489,10 +496,15 @@ a:active {
 		font-size: clamp(1.2rem, 6vw, 1.45rem);
 	}
 
-	/* Gold subscription icon should be larger */
-	.sub-plan__card:nth-child(2) .sub-plan__icon {
-		font-size: 10rem;
+	/* .sub-plan__icon {
+		font-size: 6rem;
 	}
+
+	*/
+	/* Gold subscription icon should be larger */
+	/* .sub-plan__card:nth-child(2) .sub-plan__icon {
+		font-size: 10rem;
+	}  */
 }
 
 /* Staff */
